feat: system by endpoint properties implementation
Implemented core system by endpoint properties
