# redfish/internal/entity/v1/computer_system.go
@@ -5,6 +5,10 @@ package redfish
 type ComputerSystem struct {
 	ID           string     `json:"Id"`
 	Name         string     `json:"Name"`
+	Description  string     `json:"Description,omitempty"`
+	UUID         string     `json:"UUID,omitempty"`
+	HostName     string     `json:"HostName,omitempty"`
+	BiosVersion  string     `json:"BiosVersion,omitempty"`
 	SystemType   SystemType `json:"SystemType"`
 	Manufacturer string     `json:"Manufacturer"`
 	Model        string     `json:"Model"`
