# redfish/openapi/dmtf/ComputerSystem.v1_26_0.yaml
@@ -56,6 +56,43 @@ components:
           type: string
           x-longDescription: This property shall contain the serial number for the
             system.
+        UUID:
+          description: The UUID for this system.
+          oneOf:
+          - $ref: Resource.yaml#/components/schemas/Resource_UUID
+          - enum:
+            - null
+          readOnly: true
+          x-longDescription: This property shall contain the universally unique identifier
+            number for this system.  RFC4122 describes methods to create this value.  The
+            value should be considered to be opaque.  Client software should only
+            treat the overall value as a UUID and should not interpret any subfields
+            within the UUID.  If the system supports SMBIOS, the property value should
+            follow the SMBIOS 2.6 and later recommendation for converting the SMBIOS
+            16-byte UUID structure into the Redfish canonical `xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx`
+            string format, so that the property value matches the byte order presented
+            by current OS APIs, such as WMI and dmidecode.  For additional property
+            requirements, see the corresponding definition in the Redfish Data Model
+            Specification.
+        HostName:
+          description: The DNS host name, without any domain information.
+          nullable: true
+          readOnly: false
+          type: string
+          x-longDescription: This property shall contain the host name for this system,
+            as reported by the operating system or hypervisor.  A service running
+            in the host operating system typically reports this value to the manager.  Modifying
+            this property may modify the `HostName` in one or more `EthernetInterface`
+            resources contained in this system.
+        BiosVersion:
+          description: The version of the system BIOS or primary system firmware.
+          nullable: true
+          readOnly: true
+          type: string
+          x-longDescription: This property shall contain the version string of the
+            currently installed and running BIOS for x86 systems.  For other systems,
+            the property may contain a version string that represents the primary
+            system firmware.
         Status:
           $ref: Resource.yaml#/components/schemas/Resource_Status
           description: The status and health of the resource and its subordinate or
@@ -68,6 +105,12 @@ components:
           readOnly: true
           x-longDescription: An enumeration that indicates the kind of system that
             this resource represents.
+        Oem:
+          $ref: Resource.yaml#/components/schemas/Resource_Oem
+          description: The OEM extension property.
+          x-longDescription: This property shall contain the OEM extensions.  All
+            values for properties that this object contains shall conform to the Redfish
+            Specification-described requirements.
       required:
       - '@odata.id'
       - '@odata.type'
@@ -85,10 +128,12 @@ components:
       properties:
         ResetType:
           $ref: Resource.yaml#/components/schemas/Resource_ResetType
-          description: The type of reset.
-          x-longDescription: This parameter shall contain the type of reset.  The
+          description: The type of reset. GracefulShutdown and GracefulRestart map to IPS_PowerManagementService.RequestOSPowerSavingStateChange.
+          x-longDescription: This parameter shall contain the type of reset. For Intel
+            AMT systems, GracefulShutdown and GracefulRestart values map to
+            IPS_PowerManagementService.RequestOSPowerSavingStateChange method. The
             service can accept a request without the parameter and perform an implementation-specific
-            default reset.  Services should include the `@Redfish.AllowableValues`
+            default reset. Services should include the `@Redfish.AllowableValues`
             annotation for this parameter to ensure compatibility with clients, even
             when `ActionInfo` has been implemented.
       type: object
